# usbtv007-android

./: .gitignore  settings.gradle
exampleapp/: build.gradle
exampleapp/src/main/: AndroidManifest.xml
exampleapp/src/main/java/com/arksine/exampleapp/: App.java  (+2 more)
exampleapp/src/main/res/layout/: activity_main.xml
exampleapp/src/main/res/values/: strings.xml
exampleapp/src/main/rs/: ConvertYUYV.rs
gradle/wrapper/: gradle-wrapper.properties
libusbtv/: build.gradle
libusbtv/src/main/: AndroidManifest.xml
libusbtv/src/main/cpp/: Android.mk  AndroidUsbDevice.cpp  AndroidUsbDevice.h  Application.mk  CMakeLists.txt  FrameRenderer.cpp  FrameRenderer.h  JavaCallback.h  UsbTvDriver.cpp  UsbTvDriver.h  usbtv.cpp  usbtv.h  usbtv_definitions.h  util.h
libusbtv/src/main/cpp/JNIHelpers/: DeviceParamsHelper.h  JavaCallback.h
libusbtv/src/main/res/values/: strings.xml
libusbtv/src/main/rs/: ConvertYUYV.rs
usbtvsample1/: build.gradle  proguard-rules.pro
usbtvsample1/src/main/: AndroidManifest.xml
usbtvsample1/src/main/res/layout/: activity_fullscreen.xml
usbtvsample1/src/main/res/values/: strings.xml
usbtvsample1/src/main/rs/: ConvertYUYV.rs
usbtvsample2/: build.gradle
usbtvsample2/release/: output.json
usbtvsample2/src/main/: AndroidManifest.xml
usbtvsample2/src/main/res/layout/: activity_fullscreen.xml
usbtvsample2/src/main/res/values/: strings.xml
usbtvsample3/: build.gradle
usbtvsample3/src/main/: AndroidManifest.xml
usbtvsample3/src/main/res/layout/: activity_fullscreen.xml
usbtvsample3/src/main/res/values/: strings.xml
(+39 files in other folders)
